--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -25,35 +25,45 @@ line_segments:
     end_x: 800
     end_y: 600
 event_areas:
-  - top_left: [ 71, 121 ]
-    bottom_right: [ 263, 211 ]
+  - top_left: [ 132, 421 ]
+    bottom_right: [ 272, 467 ]
     action: take_reward
     info_window:
       description:
-        - Claim your reward.
-  - top_left: [ 379, 121 ]
-    bottom_right: [ 572, 211 ]
+        - Install upgrade.
+      position: [ 103, 355 ]
+      size: [ 195, 398 ]
+  - top_left: [ 535, 121 ]
+    bottom_right: [ 675, 165 ]
+    action: queue_load_game_event
+    info_window:
+      description:
+        - Load saved games.
+      position: [ 505, 196 ]
+      size: [ 195, 240 ]
+  - top_left: [ 131, 120 ]
+    bottom_right: [ 272, 167 ]
     action: queue_save_game_event
     info_window:
       description:
         - Save your progress.
-  - top_left: [ 72, 320 ]
-    bottom_right: [ 264, 410 ]
+      position: [ 103, 196 ]
+      size: [ 195, 240 ]
+  - top_left: [ 528, 420 ]
+    bottom_right: [ 667, 466 ]
     action: LOAD_LEVEL
-    info_window:
-      description:
-        - Level 4, what do you get?
     action_argument: "game-data/levels/h_level_3/h_level_3.yml"
-  - top_left: [ 378, 319 ]
-    bottom_right: [ 571, 409 ]
-    action: queue_load_game_event
     info_window:
       description:
-        - Load previous saved games.
-  - top_left: [ 406, 238 ]
-    bottom_right: [ 548, 285 ]
+        - To the next adventure.
+      position: [ 498, 355 ]
+      size: [ 195, 398 ]
+  - top_left: [ 132, 269 ]
+    bottom_right: [ 272, 316 ]
     action: LOAD_LEVEL
+    action_argument: "game-data/levels/h_level_3_equip/h_level_3_equip.yml"
     info_window:
       description:
         - Change gears?????
-    action_argument: "game-data/levels/h_level_3_equip/h_level_3_equip.yml"
+      position: [ 103, 355 ]
+      size: [ 195, 398 ]
