--- a/sun/game-data/levels/h_level_3_equip/h_level_3_equip.yml
+++ b/sun/game-data/levels/h_level_3_equip/h_level_3_equip.yml
@@ -1,7 +1,9 @@
 name: h_level_3_equip
-background_image: game-data/levels/h_level_3_equip/h_level_3_equip.png
+background_image: game-data/levels/inventory/inventory.png
 background_music: game-data/music/crappypiano.wav
-wayfinding: game-data/levels/load_screen/wayfinding.yml
+heads_up_display: game-data/hud/hud_config_empty.yml
+player_start_position: [ 320, 240 ]
+
 player_start_position: [ 100, 300 ]
 
 measurements: [ 800, 600 ]
@@ -24,17 +26,22 @@ line_segments:
     end_x: 800
     end_y: 600
 event_areas:
-  - top_left: [ 486, 326 ]
-    bottom_right: [ 600, 423 ]
+  - top_left: [ 612, 387 ]
+    bottom_right: [ 724, 484 ]
     action: LOAD_LEVEL
+    action_argument: "game-data/levels/h_level_3_equip/h_level_3_equip.yml"
     info_window:
       description:
         - not ready
-    action_argument: "game-data/levels/h_level_3_equip/h_level_3_equip.yml"
-  - top_left: [ 32, 378 ]
-    bottom_right: [ 170, 432 ]
+      position: [ 498, 355 ]
+      size: [ 195, 398 ]
+
+  - top_left: [ 39, 378 ]
+    bottom_right: [ 179, 425 ]
     action: LOAD_LEVEL
+    action_argument: "game-data/levels/h_level_3_reward/h_level_3_reward.yml"
     info_window:
       description:
         - back to reward level.
-    action_argument: "game-data/levels/h_level_3_reward/h_level_3_reward.yml"
+      position: [ 12, 454 ]
+      size: [ 195, 500 ]
